--- a/gallery.html
+++ b/gallery.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>:: BLUE ELEPHANT :: 레트로 클래식 명품 안경</title>
     <link href="css/gallery.css" rel="stylesheet" type="text/css">
-    <script src="js/jquery-3.5.1.min.js" type="text/javascript"></script>
-    <script src="js/jquery-ui.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="js/jquery-touch-punch.min.js"></script>
-    <script src="js/jquery.smoothwheel.js" type="text/javascript"></script>
-    <script src="js/common.js" type="text/javascript"></script>
-    <script src="js/gallery.js" type="text/javascript"></script>
+    <link href="css/lightbox.min.css" rel="stylesheet" >
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/jquery-ui.min.js"></script>
+    <script src="js/jquery.smoothwheel.js"></script>
+    <script src="js/lightbox.min.js"></script>
+    <script src="js/common.js"></script>
+    <script src="js/gallery.js"></script>
 </head>
 
 <body>
