--- a/show.html
+++ b/show.html
@@ -15,153 +15,190 @@
 </head>
 
 <body>
-    <!--헤더-->
-    <div id="header" class="on">
-        <header class="wrap">
-            <h1 class="logo">
-                <a href="/">
-                    <img src="images/logo_white.png" alt="로고">
-                    <img src="images/logo_black.png" alt="로고">
-                </a>
-            </h1>
-            <ul class="gnb">
-                <li>
-                    <a href="#">
-                        <img src="images/icon_bag_white.png" alt="장바구니">
-                        <img src="images/icon_bag_black.png" alt="장바구니">
+    <div id="wrap">
+        <!--헤더-->
+        <div id="header" class="on">
+            <header class="wrap">
+                <h1 class="logo">
+                    <a href="/">
+                        <img src="images/logo_white.png" alt="로고">
+                        <img src="images/logo_black.png" alt="로고">
                     </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="images/icon_heart_white.png" alt="관심상품">
-                        <img src="images/icon_heart_black.png" alt="관심상품">
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="images/icon_search_white.png" alt="검색">
-                        <img src="images/icon_search_black.png" alt="검색">
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="menu_btn">
-                        <img src="images/icon_menu_white.png" alt="메뉴">
-                        <img src="images/icon_menu_black.png" alt="메뉴">
-                    </a>
-                </li>
-            </ul>
-        </header>
-    </div>
-    <!--컨텐츠-->
-    <div id="show_cont_wrap" class="wrap">
-        <!-- 상단 메뉴 경로 -->
-        <ul class="gls_location">
-            <li>
-                <a href="#">BLUE ELEPHANT</a>
-            </li>
-            <li>―</li>
-            <li>
-                <a href="#">GLASSES</a>
-            </li>
-        </ul>
-        <div class="show_cont">
-            <!--왼쪽-->
-            <section id="show_left">
-                <ul class="show_list"></ul>
-            </section>
-            <!--오른쪽-->
-            <section id="show_right">
-
-                <h3>HENDRIX mandarincrystal
-                    <a href="#" class="heart">
-                        <img src="images/icon_heart_black.png" alt="관심상품">
-                        <img src="images/icon_heart_black.png" alt="관심상품선택">
-                    </a>
-                </h3>
-                <p>81,500</p>
-                <button>ADD TO CART</button>
-                <ul class="show_info">
+                </h1>
+                <ul class="gnb">
                     <li>
                         <a href="#">
-                            PRODUCT DETAILS
-                            <span>+</span>
+                            <img src="images/icon_bag_white.png" alt="장바구니">
+                            <img src="images/icon_bag_black.png" alt="장바구니">
                         </a>
-                        <div>
-                            58% NEW LAUNCHING SALE 프레임 정면 135mm, 렌즈 가로 44mm, <br>
-                            렌즈 높이 40mm, 렌즈 사이 22mm, 프레임 옆면 146mm 무게 21g, <br>
-                            청광차단렌즈는 주문 제작 상품으로 교환 및 반품이 불가합니다. <br>
-                            청광 차단 렌즈는 주문제작 기간이 1~2주정도 소요됩니다.
-                        </div>
                     </li>
                     <li>
                         <a href="#">
-                            SHIPPING INFO
-                            <span>+</span>
+                            <img src="images/icon_heart_white.png" alt="관심상품">
+                            <img src="images/icon_heart_black.png" alt="관심상품">
                         </a>
-                        <div>
-                            택배<br>
-                            배송 지역 전국지역<br>
-                            비용 무료<br>
-                            영업일 기준 1일 ~ 3일 소요됩니다.
-                        </div>
                     </li>
                     <li>
                         <a href="#">
-                            MAY WE HELP?
-                            <span>+</span>
+                            <img src="images/icon_search_white.png" alt="검색">
+                            <img src="images/icon_search_black.png" alt="검색">
                         </a>
-                        <div>
-                            <a href="mailto:blueelephantkorea@gmail.com">blueelephantkorea@gmail.com</a>
-                            1644 - 2624
-                        </div>
+                    </li>
+                    <li>
+                        <a href="#" class="menu_btn">
+                            <img src="images/icon_menu_white.png" alt="메뉴">
+                            <img src="images/icon_menu_black.png" alt="메뉴">
+                        </a>
                     </li>
                 </ul>
-            </section>
+            </header>
         </div>
-    </div>
-    <!--푸터-->
-    <div id="footer">
-        <footer class="wrap">
-            <div class="footer_left">
-                법인명(상호) : (주)블루엘리펀트 대표자(성명) : 최진우 사업자 등록번호 안내 : [397-87-01239] 통신판매업 신고 2019-서울용산-0150호[사업자정보확인] <span></span>전화 : 1644-2624 팩스 : 주소 : 04391 서울특별시 용산구 이태원로16길 21 (이태원동) 1층 BLUE ELEPHANT 개인정보보호책임자 : 최진우<span></span>
-                <p>© 2020 블루엘리펀트. All rights reserved.</p>
+        <!--컨텐츠-->
+        <div id="show_cont_wrap" class="wrap">
+            <!-- 상단 메뉴 경로 -->
+            <ul class="gls_location">
+                <li>
+                    <a href="#">BLUE ELEPHANT</a>
+                </li>
+                <li>―</li>
+                <li>
+                    <a href="#">GLASSES</a>
+                </li>
+            </ul>
+            <div class="show_cont">
+                <!--왼쪽-->
+                <section id="show_left">
+                    <ul class="show_list"></ul>
+                </section>
+                <!--오른쪽-->
+                <section id="show_right">
+                    <h3>HENDRIX mandarincrystal
+                        <a href="#" class="heart">
+                            <img src="images/icon_heart_black.png" alt="관심상품">
+                            <img src="images/icon_heart_pink.png" alt="관심상품선택">
+                        </a>
+                    </h3>
+                    <p>81,500</p>
+                    <button>ADD TO CART</button>
+                    <ul class="show_info">
+                        <li>
+                            <a href="#">
+                                PRODUCT DETAILS
+                                <span>+</span>
+                            </a>
+                            <div>
+                                58% NEW LAUNCHING SALE 프레임 정면 135mm, 렌즈 가로 44mm, <br>
+                                렌즈 높이 40mm, 렌즈 사이 22mm, 프레임 옆면 146mm 무게 21g, <br>
+                                청광차단렌즈는 주문 제작 상품으로 교환 및 반품이 불가합니다. <br>
+                                청광 차단 렌즈는 주문제작 기간이 1~2주정도 소요됩니다.
+                            </div>
+                        </li>
+                        <li>
+                            <a href="#">
+                                SHIPPING INFO
+                                <span>+</span>
+                            </a>
+                            <div>
+                                택배<br>
+                                배송 지역 전국지역<br>
+                                비용 무료<br>
+                                영업일 기준 1일 ~ 3일 소요됩니다.
+                            </div>
+                        </li>
+                        <li>
+                            <a href="#">
+                                MAY WE HELP?
+                                <span>+</span>
+                            </a>
+                            <div>
+                                <a href="mailto:blueelephantkorea@gmail.com">blueelephantkorea@gmail.com</a>
+                                1644 - 2624
+                            </div>
+                        </li>
+                    </ul>
+                </section>
             </div>
-            <div class="footer_right">
-                <p>BANK ACCOUNT</p>
-                신한은행110-455-798545<span></span>
-                예금주박예술(블루엘리펀트)
-                <p>DELIVERY INFO</p>
-                CJ 대한통운<span></span>
-                서울시 용산구 이태원로 16길 21, 1층 BLUE ELEPHANT
-            </div>
-        </footer>
-    </div>
-    <!--햄버거 메뉴-->
-    <div id="menu_wrap">
-        <nav class="menu">
-            <ul class="nav_list">
+            <div id="show_prd_list" class="wrap">
+            <h2>RELATED PRODUCTS</h2>
+            <ul class="prd_list">
                 <li>
-                    <a href="#">
-                        Gallery
+                    <a href="#" class="htxt">
+                        <img src="images/g01.jpg" alt="제품1">
+                        <span class="ir">제품착용1</span>
+                        <h5>HENDRIX mandarincrystal</h5>
+                        <h6>81,500</h6>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        SUNGLASSES
+                        <img src="images/g09.jpg" alt="제품9">
+                        <span class="ir">제품착용9</span>
+                        <h5>LENNOX tortoise</h5>
+                        <h6>38,200</h6>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="htxt">
+                        <img src="images/g02.jpg" alt="제품2">
+                        <span class="ir">제품착용2</span>
+                        <h5>ARNOLD crystal</h5>
+                        <h6>38,200</h6>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        GLASSES
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        EVENT
+                        <img src="images/g10.jpg" alt="제품10">
+                        <span class="ir">제품착용10</span>
+                        <h5>ARNOLD black</h5>
+                        <h6>61,000</h6>
                     </a>
                 </li>
             </ul>
-        </nav>
+        </div>
+        </div>       <!--푸터-->
+        <div id="footer">
+            <footer class="wrap">
+                <div class="footer_left">
+                    법인명(상호) : (주)블루엘리펀트 대표자(성명) : 최진우 사업자 등록번호 안내 : [397-87-01239] 통신판매업 신고 2019-서울용산-0150호[사업자정보확인] <span></span>전화 : 1644-2624 팩스 : 주소 : 04391 서울특별시 용산구 이태원로16길 21 (이태원동) 1층 BLUE ELEPHANT 개인정보보호책임자 : 최진우<span></span>
+                    <p>© 2020 블루엘리펀트. All rights reserved.</p>
+                </div>
+                <div class="footer_right">
+                    <p>BANK ACCOUNT</p>
+                    신한은행110-455-798545<span></span>
+                    예금주박예술(블루엘리펀트)
+                    <p>DELIVERY INFO</p>
+                    CJ 대한통운<span></span>
+                    서울시 용산구 이태원로 16길 21, 1층 BLUE ELEPHANT
+                </div>
+            </footer>
+        </div>
+        <!--햄버거 메뉴-->
+        <div id="menu_wrap">
+            <nav class="menu">
+                <ul class="nav_list">
+                    <li>
+                        <a href="#">
+                            Gallery
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            SUNGLASSES
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            GLASSES
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            EVENT
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </div>
 </body>
 
