--- a/show.html
+++ b/show.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>:: BLUE ELEPHANT :: 레트로 클래식 명품 안경</title>
-    <link href="css/swiper-bundle.min.css" rel="stylesheet" type="text/css">
+    <link href="css/swiper.min.css" rel="stylesheet" type="text/css">
     <link href="css/show.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.5.1.min.js" type="text/javascript"></script>
     <script src="js/jquery-ui.min.js" type="text/javascript"></script>
-    <script src="js/swiper-bundle.min.js" type="text/javascript"></script>
+    <script src="js/swiper.min.js" type="text/javascript"></script>
     <script src="js/common.js" type="text/javascript"></script>
     <script src="js/show.js" type="text/javascript"></script>
 </head>
